added jpa relationships, additional DTOs, updated services and controllers, updated tests, added test data, added test builders, deleted deprecated files