@@ -1,224 +1,236 @@
 package com.mcommings.campaigner.services.locations;
 
-import com.mcommings.campaigner.modules.locations.dtos.RegionDTO;
+import com.mcommings.campaigner.modules.common.entities.Campaign;
+import com.mcommings.campaigner.modules.common.repositories.ICampaignRepository;
+import com.mcommings.campaigner.modules.locations.dtos.regions.CreateRegionDTO;
+import com.mcommings.campaigner.modules.locations.dtos.regions.UpdateRegionDTO;
+import com.mcommings.campaigner.modules.locations.dtos.regions.ViewRegionDTO;
 import com.mcommings.campaigner.modules.locations.entities.Region;
 import com.mcommings.campaigner.modules.locations.mappers.RegionMapper;
 import com.mcommings.campaigner.modules.locations.repositories.IRegionRepository;
 import com.mcommings.campaigner.modules.locations.services.RegionService;
+import com.mcommings.campaigner.setup.locations.factories.LocationsTestDataFactory;
+import com.mcommings.campaigner.setup.locations.fixtures.LocationsTestConstants;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.dao.DataIntegrityViolationException;
+import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.*;
+import java.util.List;
+import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
-@SpringBootTest
+@ExtendWith(MockitoExtension.class)
 public class RegionTest {
     @Mock
-    private RegionMapper regionMapper;
+    private IRegionRepository regionRepository;
 
     @Mock
-    private IRegionRepository regionRepository;
+    private ICampaignRepository campaignRepository;
+    
+    @Mock
+    private RegionMapper regionMapper;
 
     @InjectMocks
     private RegionService regionService;
 
-    private Region entity;
-    private RegionDTO dto;
+    private Region region;
+    private ViewRegionDTO viewDto;
+    private CreateRegionDTO createDto;
+    private UpdateRegionDTO updateDto;
 
     @BeforeEach
     void setUp() {
-        Random random = new Random();
-        entity = new Region();
-        entity.setId(1);
-        entity.setName("Test Region");
-        entity.setDescription("A fictional region.");
-        entity.setFk_campaign_uuid(UUID.randomUUID());
-        entity.setFk_country(random.nextInt(100) + 1);
-        entity.setFk_climate(random.nextInt(100) + 1);
-
-        dto = new RegionDTO();
-        dto.setId(entity.getId());
-        dto.setName(entity.getName());
-        dto.setDescription(entity.getDescription());
-        dto.setFk_campaign_uuid(entity.getFk_campaign_uuid());
-        dto.setFk_country(entity.getFk_country());
-        dto.setFk_climate(entity.getFk_climate());
-
-        when(regionMapper.mapToRegionDto(entity)).thenReturn(dto);
-        when(regionMapper.mapFromRegionDto(dto)).thenReturn(entity);
+        region = LocationsTestDataFactory.region();
+        viewDto = LocationsTestDataFactory.viewRegionDTO();
+        createDto = LocationsTestDataFactory.createRegionDTO();
+        updateDto = LocationsTestDataFactory.updateRegionDTO();
     }
 
     @Test
-    public void whenThereAreRegions_getRegions_ReturnsRegions() {
-        when(regionRepository.findAll()).thenReturn(List.of(entity));
-        List<RegionDTO> result = regionService.getRegions();
+    void getAll_returnsMappedDtos() {
 
-        assertNotNull(result);
+        when(regionRepository.findAll()).thenReturn(List.of(region));
+        when(regionMapper.toDto(region)).thenReturn(viewDto);
+
+        List<ViewRegionDTO> result = regionService.getAll();
+
         assertEquals(1, result.size());
-        assertEquals("Test Region", result.get(0).getName());
+        assertEquals(viewDto, result.get(0));
+
+        verify(regionRepository).findAll();
+        verify(regionMapper).toDto(region);
     }
 
     @Test
-    public void whenThereAreNoRegions_getRegions_ReturnsEmptyList() {
-        when(regionRepository.findAll()).thenReturn(Collections.emptyList());
+    void getRegionsByCampaignUUID_returnsMappedList() {
 
-        List<RegionDTO> result = regionService.getRegions();
+        when(regionRepository.findByCampaign_Uuid(LocationsTestConstants.CAMPAIGN_UUID))
+                .thenReturn(List.of(region));
 
-        assertNotNull(result);
-        assertTrue(result.isEmpty(), "Expected an empty list when there are no regions.");
-    }
+        when(regionMapper.toDto(region))
+                .thenReturn(viewDto);
 
-    @Test
-    void whenThereIsARegion_getRegion_ReturnsRegionById() {
-        when(regionRepository.findById(1)).thenReturn(Optional.of(entity));
+        List<ViewRegionDTO> result =
+                regionService.getRegionsByCampaignUUID(
+                        LocationsTestConstants.CAMPAIGN_UUID);
 
-        Optional<RegionDTO> result = regionService.getRegion(1);
-
-        assertTrue(result.isPresent());
-        assertEquals("Test Region", result.get().getName());
-    }
-
-    @Test
-    void whenThereIsNotARegion_getRegion_ReturnsNothing() {
-        when(regionRepository.findById(999)).thenReturn(Optional.empty());
-
-        Optional<RegionDTO> result = regionService.getRegion(999);
-
-        assertTrue(result.isEmpty(), "Expected empty Optional when region is not found.");
-    }
-
-    @Test
-    void whenCampaignUUIDIsValid_getRegionsByCampaignUUID_ReturnsRegions() {
-        UUID campaignUUID = entity.getFk_campaign_uuid();
-        when(regionRepository.findByfk_campaign_uuid(campaignUUID)).thenReturn(List.of(entity));
-
-        List<RegionDTO> result = regionService.getRegionsByCampaignUUID(campaignUUID);
-
-        assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals(campaignUUID, result.get(0).getFk_campaign_uuid());
+        assertEquals(viewDto, result.get(0));
+
+        verify(regionRepository)
+                .findByCampaign_Uuid(LocationsTestConstants.CAMPAIGN_UUID);
+
+        verify(regionMapper).toDto(region);
     }
 
     @Test
-    void whenCampaignUUIDIsInvalid_getRegionsByCampaignUUID_ReturnsNothing() {
-        UUID campaignUUID = UUID.randomUUID();
-        when(regionRepository.findByfk_campaign_uuid(campaignUUID)).thenReturn(Collections.emptyList());
+    void getRegionsByClimateId_returnsMappedList() {
+        when(regionRepository.findByClimate_Id(LocationsTestConstants.CONTINENT_ID))
+                .thenReturn(List.of(region));
 
-        List<RegionDTO> result = regionService.getRegionsByCampaignUUID(campaignUUID);
+        when(regionMapper.toDto(region))
+                .thenReturn(viewDto);
 
-        assertNotNull(result);
-        assertTrue(result.isEmpty(), "Expected an empty list when no regions match the campaign UUID.");
+        List<ViewRegionDTO> result =
+                regionService.getRegionsByClimateId(
+                        LocationsTestConstants.CONTINENT_ID);
+
+        assertEquals(1, result.size());
+        assertEquals(viewDto, result.get(0));
+
+        verify(regionRepository)
+                .findByClimate_Id((LocationsTestConstants.CONTINENT_ID));
+
+        verify(regionMapper).toDto(region);
     }
 
     @Test
-    void whenRegionIsValid_saveRegion_SavesTheRegion() {
-        when(regionRepository.save(entity)).thenReturn(entity);
+    void getRegionsByCountryId_returnsMappedList() {
+        when(regionRepository.findByCountry_Id(LocationsTestConstants.CONTINENT_ID))
+                .thenReturn(List.of(region));
 
-        regionService.saveRegion(dto);
+        when(regionMapper.toDto(region))
+                .thenReturn(viewDto);
 
-        verify(regionRepository, times(1)).save(entity);
+        List<ViewRegionDTO> result =
+                regionService.getRegionsByCountryId(
+                        LocationsTestConstants.CONTINENT_ID);
+
+        assertEquals(1, result.size());
+        assertEquals(viewDto, result.get(0));
+
+        verify(regionRepository)
+                .findByCountry_Id((LocationsTestConstants.CONTINENT_ID));
+
+        verify(regionMapper).toDto(region);
     }
 
     @Test
-    public void whenRegionNameIsInvalid_saveRegion_ThrowsIllegalArgumentException() {
-        RegionDTO regionWithEmptyName = new RegionDTO();
-        regionWithEmptyName.setId(1);
-        regionWithEmptyName.setName("");
-        regionWithEmptyName.setDescription("A fictional region.");
-        regionWithEmptyName.setFk_campaign_uuid(UUID.randomUUID());
-        regionWithEmptyName.setFk_country(1);
-        regionWithEmptyName.setFk_climate(1);
+    void getById_whenExists_returnsDto() {
 
-        RegionDTO regionWithNullName = new RegionDTO();
-        regionWithNullName.setId(1);
-        regionWithNullName.setName(null);
-        regionWithNullName.setDescription("A fictional region.");
-        regionWithNullName.setFk_campaign_uuid(UUID.randomUUID());
-        regionWithNullName.setFk_country(1);
-        regionWithNullName.setFk_climate(1);
+        when(regionRepository.findById(region.getId()))
+                .thenReturn(Optional.of(region));
 
-        assertThrows(IllegalArgumentException.class, () -> regionService.saveRegion(regionWithEmptyName));
-        assertThrows(IllegalArgumentException.class, () -> regionService.saveRegion(regionWithNullName));
+        when(regionMapper.toDto(region))
+                .thenReturn(viewDto);
+
+        ViewRegionDTO result = regionService.getById(region.getId());
+
+        assertEquals(viewDto, result);
+
+        verify(regionRepository).findById(region.getId());
+        verify(regionMapper).toDto(region);
     }
 
     @Test
-    public void whenRegionNameAlreadyExists_saveRegion_ThrowsDataIntegrityViolationException() {
-        when(regionRepository.findByName(dto.getName())).thenReturn(Optional.of(entity));
-        assertThrows(DataIntegrityViolationException.class, () -> regionService.saveRegion(dto));
-        verify(regionRepository, times(1)).findByName(dto.getName());
-        verify(regionRepository, never()).save(any(Region.class));
+    void getById_whenMissing_throwsException() {
+
+        when(regionRepository.findById(region.getId()))
+                .thenReturn(Optional.empty());
+
+        assertThrows(
+                IllegalArgumentException.class,
+                () -> regionService.getById(region.getId())
+        );
+
+        verify(regionRepository).findById(region.getId());
     }
 
     @Test
-    void whenRegionIdExists_deleteRegion_DeletesTheRegion() {
-        when(regionRepository.existsById(1)).thenReturn(true);
-        regionService.deleteRegion(1);
-        verify(regionRepository, times(1)).deleteById(1);
+    void create_whenValid_savesAndReturnsDto() {
+
+        Campaign campaign = new Campaign();
+        campaign.setUuid(createDto.getCampaignUuid());
+
+        when(regionMapper.toEntity(createDto)).thenReturn(region);
+        when(campaignRepository.getReferenceById(createDto.getCampaignUuid()))
+                .thenReturn(campaign);
+
+        when(regionRepository.save(region)).thenReturn(region);
+        when(regionMapper.toDto(region)).thenReturn(viewDto);
+
+        ViewRegionDTO result = regionService.create(createDto);
+
+        assertEquals(viewDto, result);
+
+        verify(regionMapper).toEntity(createDto);
+        verify(campaignRepository).getReferenceById(createDto.getCampaignUuid());
+        verify(regionRepository).save(region);
+        verify(regionMapper).toDto(region);
     }
 
     @Test
-    void whenRegionIdDoesNotExist_deleteRegion_ThrowsIllegalArgumentException() {
-        when(regionRepository.existsById(999)).thenReturn(false);
-        assertThrows(IllegalArgumentException.class, () -> regionService.deleteRegion(999));
+    void update_whenValid_updatesAndReturnsDto() {
+
+        Campaign campaign = new Campaign();
+        campaign.setUuid(updateDto.getCampaignUuid());
+
+        when(regionRepository.findById(updateDto.getId()))
+                .thenReturn(Optional.of(region));
+
+        when(campaignRepository.getReferenceById(updateDto.getCampaignUuid()))
+                .thenReturn(campaign);
+
+        when(regionRepository.save(region)).thenReturn(region);
+        when(regionMapper.toDto(region)).thenReturn(viewDto);
+
+        ViewRegionDTO result = regionService.update(updateDto);
+
+        assertEquals(viewDto, result);
+
+        verify(regionRepository).findById(updateDto.getId());
+        verify(regionMapper).updateRegionFromDto(updateDto, region);
+        verify(campaignRepository).getReferenceById(updateDto.getCampaignUuid());
+        verify(regionRepository).save(region);
+        verify(regionMapper).toDto(region);
     }
 
     @Test
-    void whenDeleteRegionFails_deleteRegion_ThrowsException() {
-        when(regionRepository.existsById(1)).thenReturn(true);
-        doThrow(new RuntimeException("Database error")).when(regionRepository).deleteById(1);
+    void update_whenMissing_throwsException() {
 
-        assertThrows(RuntimeException.class, () -> regionService.deleteRegion(1));
+        when(regionRepository.findById(updateDto.getId()))
+                .thenReturn(Optional.empty());
+
+        assertThrows(
+                IllegalArgumentException.class,
+                () -> regionService.update(updateDto)
+        );
+
+        verify(regionRepository).findById(updateDto.getId());
     }
 
     @Test
-    void whenRegionIdIsFound_updateRegion_UpdatesTheRegion() {
-        RegionDTO updateDTO = new RegionDTO();
-        updateDTO.setName("Updated Name");
+    void delete_callsRepository() {
 
-        when(regionRepository.findById(1)).thenReturn(Optional.of(entity));
-        when(regionRepository.existsById(1)).thenReturn(true);
-        when(regionRepository.save(entity)).thenReturn(entity);
-        when(regionMapper.mapToRegionDto(entity)).thenReturn(updateDTO);
+        regionService.delete(region.getId());
 
-        Optional<RegionDTO> result = regionService.updateRegion(1, updateDTO);
-
-        assertTrue(result.isPresent());
-        assertEquals("Updated Name", result.get().getName());
-    }
-
-    @Test
-    void whenRegionIdIsNotFound_updateRegion_ReturnsEmptyOptional() {
-        RegionDTO updateDTO = new RegionDTO();
-        updateDTO.setName("Updated Name");
-
-        when(regionRepository.findById(999)).thenReturn(Optional.empty());
-        assertThrows(IllegalArgumentException.class, () -> regionService.updateRegion(999, updateDTO));
-    }
-
-    @Test
-    public void whenRegionNameIsInvalid_updateRegion_ThrowsIllegalArgumentException() {
-        RegionDTO updateEmptyName = new RegionDTO();
-        updateEmptyName.setName("");
-
-        RegionDTO updateNullName = new RegionDTO();
-        updateNullName.setName(null);
-
-        when(regionRepository.existsById(1)).thenReturn(true);
-
-        assertThrows(IllegalArgumentException.class, () -> regionService.updateRegion(1, updateEmptyName));
-        assertThrows(IllegalArgumentException.class, () -> regionService.updateRegion(1, updateNullName));
-    }
-
-    @Test
-    public void whenRegionNameAlreadyExists_updateRegion_ThrowsDataIntegrityViolationException() {
-        when(regionRepository.findByName(dto.getName())).thenReturn(Optional.of(entity));
-
-        assertThrows(IllegalArgumentException.class, () -> regionService.updateRegion(entity.getId(), dto));
+        verify(regionRepository).deleteById(region.getId());
     }
 }
